fixed alignment

--- a/food-standard/scss/_header.scss
+++ b/food-standard/scss/_header.scss
@@ -1,12 +1,13 @@
 @import "_variables";
 .header {
-    height: 80px;
+    height: 100px;
     display: flex;
     background: $background;
     align-items: center;
     justify-content: space-between;
-    @media screen and (max-width:400px) {
+    @media screen and (max-width:500px) {
         display: block;
+        height: 78px;
         background: transparent;
     }
     .header-logo-container {
@@ -15,13 +16,13 @@
         align-items: center;
         margin-left: 10px;
         text-transform: uppercase;
-        @media screen and (max-width:400px) {
+        @media screen and (max-width:500px) {
             margin: 10px;
         }
         .header-logo {
-            font-size: 30px;
+            font-size: 25px;
             font-weight: bolder;
-            @media screen and (max-width:400px) {
+            @media screen and (max-width:500px) {
                 font-size: 20px;
             }
         }
@@ -32,9 +33,9 @@
         }
     }
     .header-tabs {
-        margin-left:150px;
-        @media screen and (max-width: 400px) {
-            margin-left: 0;
+        margin: 0px 40px;
+        @media screen and (max-width: 500px) {
+            margin: 0;
             background: $background;
         }
     }
@@ -42,27 +43,26 @@
 .nav {
     border: none ;
     li {
-        @media screen and (max-width: 400px) {
+        @media screen and (max-width: 500px) {
             height: 40px;
         }
         a {
-            top:20px;
+            top:30px;
             color: $strip-black;
             height: 58px;
             padding: 10px;
             font-size: 14px;
             font-weight: bold;
-            @media screen and (max-width: 400px) {
+            @media screen and (max-width: 500px) {
                 top: 0px;
                 height: 40px;
                 font-size: 5px;
-                width: 70px;
             }
         }
     }  
     .first a {
         width: 164px;
-        @media screen and (max-width: 400px) {
+        @media screen and (max-width: 500px) {
             width: 70px;
         }
     }
