--- a/food-standard/scss/_progress-bar.scss
+++ b/food-standard/scss/_progress-bar.scss
@@ -2,9 +2,9 @@
 .battery {
     text-align: center;
     position: relative;
-    bottom: 7px;
-    @media screen and (max-width: 400px) {
-        bottom: 25px;
+    margin-top: 5px;
+    @media screen and (max-width: 500px) {
+       bottom: 25px;
     }
    .bar {
     display: inline-block;
@@ -12,8 +12,8 @@
     height: 15px;
     background: $progress-default;
     margin: 0;
-    @media screen and (max-width: 400px) {
-       padding: 1px;
+    @media screen and (max-width: 500px) {
+       padding: 0.5px;
        height: 10px; 
     }
     }
