--- a/food-standard/scss/_variables.scss
+++ b/food-standard/scss/_variables.scss
@@ -5,5 +5,5 @@ $progress-success: #63BF87;
 $progress-default: #E35E56;
 $border-dark: #EDEDED;
 $margin-left: 40px;
-$padding-left: 40px;
+$padding-left: 100px;
 $font-size: 18px;
